# lotus

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  data.txt  hello.json  n.xml  report_file.lua  scan.lua  test.json  test.py  test.txt  urls.txt
.github/workflows/: main.yml  release.yml
docs/: lua_scripting.md
examples/: main.rs
fuzzer/active/: phpinfo.lua  rxss.lua  sql_errors.lua  sqli.lua
fuzzer/active/txt/: sqli_errs.txt  xss.txt
fuzzer/test/: xss.lua
scripts/active/: CVE-2004-0519.lua  new.lua  phpinfo.lua  rxss.lua  sqlierrors.lua
scripts/passive/: jwtkey.lua
src/: lib.rs  lua_api.rs  main.rs  model.rs  starter.rs
src/cli/: args.rs  bar.rs  errors.rs  input.rs  logger.rs  logo.rs  main.rs  mod.rs
src/cli/args/: mod.rs  new.rs  scan.rs  validator.rs
src/cli/default_scripts/: mod.rs
src/cli/default_scripts/lua_examples/: cve.lua  fuzz.lua  passive.lua  service.lua
src/cli/input/: load_scripts.rs  parse_requests.rs
src/cli/startup/: mod.rs  new.rs  scan.rs  urls.rs
src/cli/startup/scan/: input_handler.rs  scan.rs
src/cli/term/: bar.rs  logger.rs  mod.rs
src/cli/txt/: logo.txt
src/core/: mod.rs  script.lua  utils.rs
src/core/utils/: bar.rs  browser.rs  files.rs  html.rs  http.rs  lua_report.rs  mod.rs  oast.rs  report.rs  scripts.rs  url.rs
src/core/utils/network/: http.rs
src/core/utils/network/http/: http_lua_api.rs
src/core/utils/output/: mod.rs
src/core/utils/parsing/: html.rs  mod.rs  url.rs
src/core/utils/parsing/url/: url_lua.rs
src/core/utils/payloads/: xss.rs
src/handlers/: mod.rs
src/lua/: engine.rs  loader.rs  mod.rs  model.rs  run.rs  scan.rs
src/lua/encode/: base64.rs  html.rs  mod.rs  url.rs
src/lua/network/: http.rs  mod.rs  oast.rs  selenium_driver.rs  socket.rs
src/lua/network/http/: http_lua_api.rs
src/lua/network/selenium_driver/: selenium_lua.rs
src/lua/output/: cve.rs  general.rs  mod.rs  report.rs  vuln.rs
src/lua/parsing/: files.rs  html.rs  mod.rs  req.rs  text.rs  url.rs
src/lua/parsing/url/: url_lua.rs
src/lua/payloads/: xss.rs
src/lua/runtime/: encode_ext.rs  http_ext.rs  mod.rs  payloads_ext.rs  utils_ext.rs
src/lua/threads/: mod.rs  runner.rs
src/network/: http.rs
src/network/http/: http_lua_api.rs
src/output/: cve.rs  mod.rs  report.rs  vuln.rs
src/parsing/: files.rs  url.rs
src/parsing/url/: url_lua.rs
src/payloads/: mod.rs  xss.rs
src/payloads/xss/: xsspayloads.rs
src/scan/: mod.rs  threads.rs
src/scope/: mod.rs  sitemap.rs
src/threader/: mod.rs
src/threads/: mod.rs
src/utils/: bar.rs  logger.rs  mod.rs
src/utils/net/: requester.rs
src/utils/term/: bar.rs  emojis.rs  logger.rs
tests/: args_test.rs  files.rs  http.rs  url.rs
