[package]
name = "lotus"
version = "0.5.0-beta"
edition = "2021"
license = "GPLv2"
keywords = ["security", "automation", "bugbounty"]
categories = ["command-line-utilities"]
description = "Fast Web Security Scanner written in Rust based on Lua Scripts"
authors = ["Khaled Nassar <knassar702@gmail.com>"]
readme = "README.md"

[features]
default = ["lua54"]
lua54 = ["tealr/mlua_lua54"]
lua53 = ["tealr/mlua_lua53"]
lua52 = ["tealr/mlua_lua52"]
lua51 = ["tealr/mlua_lua51"]
luajit = ["tealr/mlua_luajit"]
vendored = ["tealr/mlua_vendored"]

[[bin]]
name = "lotus"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# LUA
mlua = { version = "0.8" , features=["serialize"]}
tealr = {version="0.9.0-alpha4", features=["mlua", "mlua_async"]} 
tealr_derive="=0.9.0-alpha4"

# Threading
futures = "0.3.24"
tokio = { version = "1.21.0", features = ["full"] }
lazy_static = "1.4.0"

# LOGGING & Console
log = "0.4.17"
structopt = "0.3.20"
atty = "0.2.14"
indicatif = "0.17.0"
thiserror = "1.0"

# REGEX AND MATCHES
scraper = "0.13.0"


# HTTP & URLS
serde_json = "1.0.85"
serde_urlencoded = "0.7.1"
serde = { version = "1.0.144", features = ["derive"] }

slinger = { version = "0.1.2", features = ["serde", "cookie", "charset", "tls", "gzip"] }
url = "2.2.2"
regex = "1.11.1"
console = "0.15.8"
chrono = "0.4.38"
colored = "2.1.0"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
strip = true
